# voiceflow

./: .gitignore  CLAUDE.md  README.md  package.json
.github/workflows/: build.yml
apps/desktop/: index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ProcessingSpinner.tsx  Toggle.tsx  VoicePill.tsx  Waveform.tsx  index.ts
apps/desktop/src/components/AudioWaveform/: index.tsx
apps/desktop/src/components/HotkeyPicker/: index.tsx
apps/desktop/src/components/MainApp/: index.tsx
apps/desktop/src/components/ModelLoading/: index.tsx
apps/desktop/src/components/Onboarding/: index.tsx
apps/desktop/src/components/PulsingOrb/: index.tsx
apps/desktop/src/components/Settings/: index.tsx
apps/desktop/src/components/TranscriptionBubble/: index.tsx
apps/desktop/src/hooks/: index.ts  useAudioCapture.ts  useTranscription.test.tsx  useTranscription.ts  useWebSocket.ts
apps/desktop/src/stores/: appStore.ts
apps/desktop/src/utils/: hotkey.test.ts  hotkey.ts  modifierSymbols.ts  serverControl.ts
apps/desktop/src/worklets/: audio-worklet.d.ts  pcm-capture-processor.js
python/: build_sidecar.py  pyproject.toml  voiceflow-server.spec
python/src/voiceflow_server/: __init__.py  server.py
python/tests/: test_websocket_integration.py
scripts/: build-server.sh  dev.sh  e2e-shortcut.sh
