[project]
name = "voiceflow-server"
version = "0.1.0"
description = "Local speech-to-text server using parakeet-mlx"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "numpy>=1.26.0",
    "numba>=0.59.0",
    "llvmlite>=0.42.0",
    "parakeet-mlx>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.3.0",
    "pytest>=8.3.4",
]

[project.scripts]
voiceflow-server = "voiceflow_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceflow_server"]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.3.0",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
